--- a/package.json
+++ b/package.json
@@ -17,5 +17,14 @@
         "path": "./themes/Core-color-theme.json"
       }
     ]
+  },
+  "scripts": {
+    "generate": "tsx ./src/index.ts",
+    "watch": "tsx --watch ./src/index.ts"
+  },
+  "devDependencies": {
+    "@types/node": "^22.5.4",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.2"
   }
 }
